--- a/examples/How-To-Cleaned.ipynb
+++ b/examples/How-To-Cleaned.ipynb
@@ -215,6 +215,9 @@
    "outputs": [],
    "source": [
     "import pandas as pd\n",
+    "# in case you've cloned the repo without installing the lib via pip\n",
+    "import sys\n",
+    "sys.path.append('../')\n",
     "from df_and_order.df_reader import DfReader\n",
     "from df_and_order.df_cache import DfCache"
    ]
