- ability to base a transform on any other transform - check for changes of df shape by in-memory transforms when permanent transforms are also present - now transforms specify df format - capture transforms state to track changes

--- a/examples/How-To-Cleaned.ipynb
+++ b/examples/How-To-Cleaned.ipynb
@@ -822,7 +822,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "It can be annoying to get such an error after some minor changes, e.g. something was renamed or blank lines were removed.\n",
+    "There are two ways to deal with it. \n",
+    "\n",
+    "First one is to force the read operation by passing `forced=True`:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "amazing_reader.read(df_id=df_id, transform_id=dummy_transform_id, forced=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "It can save you time when you are sure that your data will be consistent with your expectations yet this way is certainly not recommended.\n",
+    "\n",
+    "Yeah, it can be annoying to get such an error after some minor changes, e.g. something was renamed or blank lines were removed.\n",
     "\n",
     "But it's better to get an error rather than outdated wrong dataframe.\n",
     "If we remove the file and try again - everything works just fine."
