- try to register a transform as soon as possible - updated How-To notebooks

--- a/examples/How-To-Cleaned.ipynb
+++ b/examples/How-To-Cleaned.ipynb
@@ -290,7 +290,6 @@
     "# other information is already available for us\n",
     "reader.create_df_config(df_id=df_id, # config will store dataframe id as well\n",
     "                        initial_df_format=df_format, # in which format initial dataframe is saved\n",
-    "                        transformed_df_format=df_format, # in which format to save a transformed datafarme\n",
     "                        metadata=metadata)"
    ]
   },
@@ -491,6 +490,7 @@
     "example_transform_id = 'model_input'\n",
     "# here's the instance of our entire transform\n",
     "example_transform = DfTransformConfig(transform_id=example_transform_id, \n",
+    "                                      df_format=df_format,\n",
     "                                      in_memory_steps=in_memory_steps)"
    ]
   },
@@ -615,6 +615,7 @@
     "permanent_transform_id = 'model_input_permanent'\n",
     "# here's the instance of our entire transform\n",
     "permanent_transform = DfTransformConfig(transform_id=permanent_transform_id, \n",
+    "                                        df_format=df_format,\n",
     "                                        in_memory_steps=in_memory_steps,\n",
     "                                        permanent_steps=permanent_steps)"
    ]
@@ -671,7 +672,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Important note: `in-memory` transforms run everytime when your read a dataframe, no matter it was stored on the disk or not."
+    "### Important note: `in-memory` transforms run everytime when your read a dataframe, no matter it was stored on the disk or not."
    ]
   },
   {
@@ -754,6 +755,7 @@
     "]\n",
     "dummy_transform_id = 'dummy'\n",
     "dummy_transform = DfTransformConfig(transform_id=dummy_transform_id, \n",
+    "                                    df_format=df_format,\n",
     "                                    permanent_steps=permanent_steps)"
    ]
   },
@@ -877,7 +879,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Please keep in mind that when we want to persist our transformation on a dataframe, it will be affected by `in-memory` transforms as well. Say if you remove some columns using `in-memory` steps and then perform some other `permanent` steps, the df will be persisted as is after the last step, thus next time you try to read the df it will fail because `in-memory` transform will have no columns to remove."
+    "If your transform consists of both in-memory and permanent steps, your in-memory steps are not allowed to change the shape of df. Remember, in-memory steps are applied every time your read a dataframe."
    ]
   },
   {
@@ -912,29 +914,6 @@
    "outputs": [],
    "source": [
     "amazing_reader.read(df_id=df_id, transform=bad_in_memory_transform)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "First time it works fine. But if your try it once again:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "amazing_reader.read(df_id=df_id, transform_id=bad_in_memory_transform_id)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "It crashes, just as expected. Automated check for the case will be added sometime in the future."
    ]
   }
  ],
