- mypy, flake8, pre-commit, pipenv - small refactoring - tests - lib is now doesn't rely on any dataframe framework

--- a/examples/How-To-Cleaned.ipynb
+++ b/examples/How-To-Cleaned.ipynb
@@ -476,7 +476,7 @@
    "source": [
     "from df_and_order.df_transform import DfTransformConfig\n",
     "from df_and_order.df_transform_step import DfTransformStepConfig\n",
-    "from df_and_order.steps import DropColsTransformStep, DatesTransformStep\n",
+    "from df_and_order.steps.pd import DropColsTransformStep, DatesTransformStep\n",
     "\n",
     "# we describe all the steps required\n",
     "in_memory_steps = [\n",
@@ -903,6 +903,7 @@
     "bad_in_memory_transform_id = 'bad_in_memory'\n",
     "# here's the instance of our entire transform\n",
     "bad_in_memory_transform = DfTransformConfig(transform_id=bad_in_memory_transform_id, \n",
+    "                                            df_format='csv',\n",
     "                                            in_memory_steps=in_memory_steps,\n",
     "                                            permanent_steps=permanent_steps)"
    ]
